# cosmos-mongo-gtwy

./: .env  Cargo.toml  README.md
cosmosdb-access/: .env  Cargo.toml
cosmosdb-access/src/: main.rs
src/: main.rs
