[package]
name = "azure_cosmosdb_mongodb_gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.6"
tokio = { version = "1.0", features = ["full"] }
#azure_cosmos = "0.5.0"
azure_data_cosmos = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

chrono = "0.4"     # sync module
futures = "0.3"

async-trait = "0.1"     #Transaction Mgr, Scaling Mgr, Monitoring Collector 
#azure_monitor = "0.5"
opentelemetry-application-insights = "*"
uuid = { version = "1.0", features = ["v4"] }

